Add auth header in http proxy